duplicate payment error should prevent case submission